prevent dropdown menu from being cut off by hover effect of below user

--- a/app/assets/stylesheets/base/user_results.scss
+++ b/app/assets/stylesheets/base/user_results.scss
@@ -26,6 +26,7 @@
   height: 35px;
   border-radius: 10px;
   background-color: whitesmoke;
+  z-index: 2;
   li {
     &:hover {
       background-color: whitesmoke;
